<resources>
    <string name="worst_quality">Worst quality</string>
    <string name="best_quality">Best quality</string>
    <string name="search">Search</string>
    <string name="remove_all">Remove all</string>
    <string name="remove_results">Clear results</string>
    <string name="download_all">Download all</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="directories">Folders</string>
    <string name="music_directory">Audio folder</string>
    <string name="video_directory">Video folder</string>
    <string name="updating">Updating</string>
    <string name="ytdl_update_hint">Useful tip while downloading updates</string>
    <string name="update_ytdl">Update yt-dlp to the new version</string>
    <string name="about">About</string>
    <string name="source_code">Source code</string>
    <string name="search_hint">Search or insert URL</string>
    <string name="failed_download">Could not download file</string>
    <string name="download_notification_channel_name">File downloads</string>
    <string name="download_notification_channel_description">Notification showing the progress of downloading audio and video files</string>
    <string name="you_are_in_latest_version">Using the latest version</string>
    <string name="ytld_update_success">New yt-dlp version installed</string>
    <string name="ytdl_already_updating">Installing new yt-dlp version</string>
    <string name="ytdl_updating_started">Downloading new yt-dlp version</string>
    <string name="Remove">Remove</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete_history_desc">Delete the entire history, permanently</string>
    <string name="confirm_delete_history">Confirm</string>
    <string name="search_history_hint">Search from history</string>
    <string name="search_command_hint">Search from commands</string>
    <string name="no_results">No results</string>
    <string name="more">More</string>
    <string name="update_app">Check for updates</string>
    <string name="version">Version</string>
    <string name="command_directory">Custom command folder</string>
    <string name="couldnt_find_apk">Could not find a suitable APK</string>
    <string name="downloading_update">Downloading new version</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="concurrent_fragments_summary">Number of fragments of a DASH/HLS native video to download concurrently</string>
    <string name="concurrent_fragments">Concurrent fragments</string>
    <string name="downloading">Downloading</string>
    <string name="limit_rate">Limit rate</string>
    <string name="limit_rate_summary">Maximum download rate (in bytes per second), e.g. 50K or 4.2M</string>
    <string name="aria2_summary">Use aria2c as downloader instead of the default</string>
    <string name="processing">Processing</string>
    <string name="embed_subs_summary">Add subtitles in the video</string>
    <string name="embed_thumb">Thumbnail covers</string>
    <string name="embed_thumb_summary">Use the thumbnail as cover art</string>
    <string name="add_chapters">Chapters in videos</string>
    <string name="add_chapters_summary">Mark YouTube / SponsorBlock segments as chapters for the video</string>
    <string name="save_thumb">Save thumbnail</string>
    <string name="save_thumb_summary">Save the thumbnail in the download folder</string>
    <string name="audio_format">Audio format</string>
    <string name="video_format">Video format</string>
    <string name="audio_quality">Audio quality</string>
    <string name="audio_quality_summary">0 (best) 10 (worst)</string>
    <string name="cancel_task">Cancel task</string>
    <string name="run_command">Run command</string>
    <string name="command_download_notification_channel_name">Command downloads</string>
    <string name="command_download_notification_channel_description">Notification showing the progress of downloading using a yt-dlp command</string>
    <string name="items_left">item(s) left</string>
    <string name="history_is_empty">History is empty</string>
    <string name="you_are_going_to_delete">Deleting</string>
    <string name="url">URL</string>
    <string name="link_copied_to_clipboard">Link copied to clipboard</string>
    <string name="api_key">Use API key</string>
    <string name="api_key_summary">Video recommendations from YouTube API</string>
    <string name="update_app_summary">Announce new versions of the app when it is opened. The data is extracted from the official GitHub Repository</string>
    <string name="downloads">Downloads</string>
    <string name="search_results">Search Results</string>
    <string name="remove_deleted">Remove deleted</string>
    <string name="remove_duplicates">Remove duplicates</string>
    <string name="sort_by">Sorting</string>
    <string name="trendingPlaylist" translatable="false">ytdlnis-TRENDING</string>
    <string name="remove_downloading">Cancel downloads</string>
    <string name="incognito_summary">Download without adding to history</string>
    <string name="configure_download">Adjust download</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="download">Download</string>
    <string name="video_quality">Video quality</string>
    <string name="embed_subtitles">Embed subtitles</string>
    <string name="add_chapter">Add chapters</string>
    <string name="show_download_card">Show download card</string>
    <string name="download_card_summary">Modify settings for that item before downloading. Disabling this option starts the download immediately</string>
    <string name="Open_File">Open file</string>
    <string name="you_are_going_to_delete_multiple_items">Deleting multiple items</string>
    <string name="select_sponsorblock_filtering">Select SponsorBlock filtering</string>
    <string name="concurrent_downloads">Concurrent downloads</string>
    <string name="concurrent_downloads_summary">Number of downloads executing at the same time</string>
    <string name="defaultValue">Default</string>
    <string name="logs">Logs</string>
    <string name="file_name_template">Filename template</string>
    <string name="language">Language</string>
    <string name="command_templates">Command templates</string>
    <string name="terminal">Terminal</string>
    <string name="format">Format</string>
    <string name="enable_mtime">Enable mtime</string>
    <string name="enable_mtime_summary">Set the HTTP Last-Modified header as last modified time</string>
    <string name="update_formats">Update formats</string>
    <string name="log_downloads">Log downloads</string>
    <string name="log_downloads_summary">Create a log file for each download</string>
    <string name="download_queue">Download queue</string>
    <string name="import_from_clipboard">Import from clipboard</string>
    <string name="export_from_clipboard">Export to clipboard</string>
    <string name="preferred_download_type">Preferred download type</string>
    <string name="preferred_download_type_summary">Default tab the download card will open to</string>
    <string name="access_all_directories">Allow access to all directories</string>
    <string name="access_all_directories_summary">Let the app download on directories that are restricted by default</string>
    <string name="clear_temporary_files">Clear cache folder</string>
    <string name="clear_temporary_files_summary">Delete cached files, infojsons and other temporary configurations</string>
    <string name="restrict_filenames">Restrict filenames</string>
    <string name="restrict_filenames_summary">Restrict filenames to only ASCII characters, and avoid \"&amp;\" and spaces in filenames</string>
    <string name="kill_app">Terminate app</string>
    <string name="update_formats_summary">Fetch the formats as soon as the download card appears</string>
    <string name="ignore_battery_optimization">Ignore battery optimization</string>
    <string name="cookies">Cookies</string>
    <string name="delete_all_cookies">Delete all cookies</string>
    <string name="download_over_metered_networks">Download over metered networks</string>
    <string name="download_over_metered_networks_summary">Downloads using any network type. Otherwise waits for an unmetered network</string>
    <string name="save_subs">Save subtitles</string>
    <string name="save_subs_desc">Write subtitle file</string>
    <string name="video_recommendations">Video recommendations</string>
    <string name="video_recommendations_summary">Get recommended videos on the home screen</string>
    <string name="preferred_search_engine">Preferred search engine</string>
    <string name="preferred_search_engine_summary">The search engine to use for in-app searches</string>
    <string name="preferred_home_screen">Preferred home screen</string>
    <string name="Theme">Theme</string>
    <string name="accents">Accents</string>
    <string name="high_contrast">High contrast</string>
    <string name="pure_theme_summary">Pure black / white theme</string>
    <string name="quick_download">Quick download</string>
    <string name="quick_download_summary">Continue with the download process immediately, without fetching data beforehand</string>
    <string name="preferred_format_id">Preferred format ID</string>
    <string name="preferred_locale">Preferred locale</string>
    <string name="keep_cache">Keep fragments</string>
    <string name="keep_cache_summary">Don\'t delete temporary files after the download is finished</string>
    <string name="incognito">Incognito</string>
    <string name="appearance">Appearance</string>
    <string name="search_suggestions">Search suggestions</string>
    <string name="search_suggestions_summary">Get search suggestions from Google</string>
    <string name="misc">Miscellaneous</string>
    <string name="swipe_gestures">Swipe gestures</string>
    <string name="swipe_gestures_summary">Swipe items for certain actions</string>
    <string name="move_temporary_files">Move temporary files</string>
    <string name="move_temporary_files_summary">Transfer cached download files to the downloads folder</string>
    <string name="format_order">Format order</string>
    <string name="user_agent_header">User-Agent header</string>
    <string name="export_file">Export file</string>
    <string name="app">App</string>
    <string name="format_filter">Format filter</string>
    <string name="observe_sources">Observe sources</string>
    <string name="reset">Reset</string>
    <string name="reset_preferences_in_screen">Reset all preferences in this screen</string>
    <string name="packages">Packages</string>
    <string name="installation_method">APK Installation method</string>
    <string name="choose_installer_app">Choose an installer app</string>
    <string name="ytdlp" translatable="false">yt-dlp</string>
    <string name="temporary_files">Temporary files</string>
    <string name="unfinished_downloads">Unfinished downloads</string>
    <string name="unfinished_downloads_summary">Partial files of stopped or failed downloads, kept so they can be resumed</string>
    <string name="info_jsons">Info-JSONs</string>
    <string name="info_jsons_summary">Saved video metadata so yt-dlp doesn\'t have to fetch it again</string>
    <string name="ytdlp_cache">yt-dlp cache</string>
    <string name="ytdlp_cache_summary">Data yt-dlp reuses between runs, like YouTube player signatures</string>
    <string name="temporary_configurations">Temporary configurations</string>
    <string name="temporary_configurations_summary">Command configs, URL lists and other short-lived files</string>
    <string name="downloaded_apks">Downloaded APKs</string>
    <string name="downloaded_apks_summary">APKs downloaded for app and package updates</string>
    <string name="clear_everything">Clear everything</string>
</resources>