<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <PreferenceCategory android:title="@string/updating">

        <Preference
            app:icon="@drawable/ic_update"
            app:key="ytdlp_update_screen"
            app:title="@string/ytdlp" />

        <Preference
            android:icon="@drawable/ic_update_app"
            app:key="app_update_screen"
            app:title="@string/app" />

        <Preference
            app:icon="@drawable/ic_code"
            app:key="packages"
            app:title="@string/packages" />

        <ListPreference
            app:icon="@drawable/baseline_install_mobile_24"
            android:defaultValue="system"
            android:entries="@array/apk_install_methods"
            android:entryValues="@array/apk_install_methods_values"
            app:key="apk_install_method"
            app:useSimpleSummaryProvider="true"
            app:title="@string/installation_method" />

        <Preference
            app:icon="@drawable/baseline_pie_chart_24"
            app:key="apk_install_external_apk_id"
            app:isPreferenceVisible="false"
            app:title="@string/choose_installer_app" />

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/format">
        <ListPreference
            android:defaultValue="filesize"
            android:entries="@array/format_ordering"
            android:entryValues="@array/format_ordering_values"
            android:icon="@drawable/baseline_sort_24"
            app:key="format_order"
            app:useSimpleSummaryProvider="true"
            app:title="@string/format_order" />

        <ListPreference
            android:defaultValue="ALL"
            android:entries="@array/format_filtering"
            android:entryValues="@array/format_filtering_values"
            android:icon="@drawable/baseline_filter_alt_24"
            app:key="format_filter"
            app:useSimpleSummaryProvider="true"
            app:title="@string/format_filter" />

        <SwitchPreferenceCompat
            android:widgetLayout="@layout/preferece_material_switch"
            app:defaultValue="true"
            android:icon="@drawable/ic_format"
            android:key="update_formats"
            app:summary="@string/update_formats_summary"
            app:title="@string/update_formats" />
    </PreferenceCategory>

    <Preference
        app:icon="@drawable/baseline_reset_tv_24"
        app:key="reset_preferences"
        android:summary="@string/reset_preferences_in_screen"
        app:title="@string/reset" />

</PreferenceScreen>