<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" android:theme="@style/BaseTheme">

    <item android:title="@string/home"
        android:icon="@drawable/ic_home"
        android:checkable="true"
        android:id="@+id/homeFragment"/>
    <item android:title="@string/downloads"
        android:icon="@drawable/ic_downloads"
        android:checkable="true"
        android:id="@+id/historyFragment"/>
    <item android:title="@string/terminal"
        android:icon="@drawable/ic_terminal"
        android:checkable="true"
        android:id="@+id/terminalActivity"/>
    <item android:title="@string/logs"
        android:icon="@drawable/ic_baseline_file_open_24"
        android:checkable="true"
        android:id="@+id/downloadLogListFragment"/>
    <item android:title="@string/command_templates"
        android:icon="@drawable/ic_baseline_keyboard_arrow_right_24"
        android:checkable="true"
        android:id="@+id/commandTemplatesFragment"/>
    <item android:title="@string/download_queue"
        android:icon="@drawable/baseline_downloading_24"
        android:checkable="true"
        android:id="@+id/downloadQueueMainFragment"/>
    <item android:title="@string/cookies"
        android:icon="@drawable/baseline_cookie_24"
        android:checkable="true"
        android:id="@+id/cookiesFragment"/>
    <item android:title="@string/observe_sources"
        android:icon="@drawable/baseline_calendar_month_24"
        android:checkable="true"
        android:id="@+id/observeSourcesFragment"/>
    <item android:title="@string/kill_app"
        android:checkable="true"
        android:icon="@drawable/ic_power"
        android:id="@+id/terminate"/>
    <item android:title="@string/settings"
        android:checkable="true"
        android:icon="@drawable/ic_settings"
        android:id="@+id/activitySettings"/>
</menu>