<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/delete_cookies"
        android:title="@string/delete_all_cookies"
        app:showAsAction="never" />

    <item
        android:id="@+id/use_header"
        android:title="@string/user_agent_header"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/import_clipboard"
        android:title="@string/import_from_clipboard"
        app:showAsAction="never" />

    <item
        android:id="@+id/export_clipboard"
        android:title="@string/export_from_clipboard"
        app:showAsAction="never" />

    <item
        android:id="@+id/export_file"
        android:title="@string/export_file"
        app:showAsAction="never" />
</menu>